[feat][#23] Add transformation of whitespace characters in Wordification implementation